Added new methods